# lounge-gtk-theme-community

./: README.md  meson.build
src/: index.theme.in
src/gtk3/: gtk3-common.scss  gtk3-mate.css  gtk3.scss
src/metacity-1/: meson.build  metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
