metacity_dir = join_paths(get_option('datadir'), 'themes', 'Lounge', 'metacity-1')

# Install individual files
install_data('metacity-theme-1.xml', install_dir: metacity_dir)
install_data('metacity-theme-2.xml', install_dir: metacity_dir)
install_data('metacity-theme-3.xml', install_dir: metacity_dir)
install_data('thumbnail.png', install_dir: metacity_dir)

# Install the images directory
install_subdir('images', install_dir: metacity_dir)
